Fixed a bug with show/hide menu behind a button.

--- a/Resources/Stylesheets/OfficeUI.Ribbon.css
+++ b/Resources/Stylesheets/OfficeUI.Ribbon.css
@@ -15,7 +15,7 @@ li[role=tab].active { color: #0072C6; border-color: #D4D4D4 #D4D4D4 #FFFFFF; bor
 .smallicon > IMG { vertical-align: middle; }
 .bigicon { padding-left: 3px; padding-right: 3px; padding-top: 1px; vertical-align: top; }
 .bigicon > IMG { height: 32px; width: 32px; }
-.bigicon:not(.disabled):hover, .smallicon:not(.disabled):hover { background-color: #CDE6F7; }
+.bigicon:not(.disabled):not(.active):hover, .smallicon:not(.disabled):not(.active):hover { background-color: #CDE6F7; }
 .iconlegend { line-height: 16px; }
 .arrow { bottom: 2px; left: 2px; }
 .seperator { background-color: #D4D4D4; height: 84px; margin-left: 7px; margin-top: 4px; width: 1px; }
@@ -26,3 +26,4 @@ li[role=tab].active { color: #0072C6; border-color: #D4D4D4 #D4D4D4 #FFFFFF; bor
 .imageHolder { text-align: center; padding-top: 4px; width: 16px; height: 16px; }
 .imageHolder > IMG { width: 16px; height: 16px; }
 .menuItem { height: 23px; line-height: 23px; vertical-align: top; }
+.icon.active { background-color: #92c0e0; }
